data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_748.wast
;; 9. **Test Description**: Include chained `nop` and `drop` instructions before a `br_table`, with the table having more indices than labels defined in the current function.    - **Constraint**: Ensuring `nop` and `drop`’s presence does not alter stack or control for `br_table`.    - **Edge Case**: Avoiding mismanagement of labels by `br_table`.

(assert_invalid
  (module
    (func $test (block (result i32) (i32.const 0) (nop) (drop) (br_table 0 1 1)))
  )
  "index out of range"
)